<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.cucumber</groupId>
        <artifactId>cucumber-parent</artifactId>
        <version>4.2.0</version>
    </parent>
    <artifactId>zephyr-xml-formatter</artifactId>
    <!--
    The MAJOR.MINOR.PATCH version should be the same as cucumber.version below.
    Use a 4th digit to track additional patch versions for this plugin.
    -->
    <version>7.21.1</version>
    <packaging>jar</packaging>
    <name>Zephyr XML formatter for Cucumber</name>

    <properties>
        <project.Automatic-Module-Name>io.cucumber.zephyr</project.Automatic-Module-Name>
        <java.version>17</java.version>
        <junit.version>4.13.1</junit.version>
        <cucumber.version>7.21.1</cucumber.version>
    </properties>

    <scm>
        <connection>scm:git:git://github.com/SmartBear/cucumber-jvm-zephyr-xml.git</connection>
        <developerConnection>scm:git:git@github.com:SmartBear/cucumber-jvm-zephyr-xml.git</developerConnection>
        <url>git://github.com/SmartBear/cucumber-jvm-zephyr-xml.git</url>
        <tag>v6.11.0.0</tag>
  </scm>

    <dependencies>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-core</artifactId>
            <version>${cucumber.version}</version>
            <!-- Allow users to use any 4.2.X version of Cucumber -->
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
